<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projectmobilerestaurant.ui.notifications.NotificationsFragment">

    <View
        android:id="@+id/viewToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSearchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/title_notifications"
        android:textColor="@color/ashykOrinWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/viewToolbar"
        app:layout_constraintStart_toStartOf="@+id/viewToolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="textTerms,buttonAshykOrin,buttonCreateAccount,buttonFacebook,buttonGoogle,viewLeft,textOr,viewRight"
        tools:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAshykOrin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/ic_home"
        android:paddingStart="13dp"
        android:paddingEnd="0dp"
        android:text="@string/notifications_sign_in_ashyk_orin"
        android:textAllCaps="false"
        android:textColor="@color/ashykOrinWhite"
        android:textSize="16sp"
        app:drawableTint="@color/ashykOrinWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewToolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/ashykOrinWhite"
        android:text="@string/notifications_sign_in_google"
        android:textAllCaps="false"
        android:textColor="@color/ashykOrinBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonAshykOrin"
        app:layout_constraintStart_toStartOf="@+id/buttonAshykOrin"
        app:layout_constraintTop_toBottomOf="@+id/buttonAshykOrin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/ashykOrinToryBlue"
        android:text="@string/notifications_sign_in_facebook"
        android:textAllCaps="false"
        android:textColor="@color/ashykOrinWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonGoogle"
        app:layout_constraintStart_toStartOf="@+id/buttonGoogle"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle" />

    <View
        android:id="@+id/viewLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="15dp"
        android:background="@color/ashykOrinDarkGray"
        app:layout_constraintBottom_toBottomOf="@+id/textOr"
        app:layout_constraintEnd_toStartOf="@+id/textOr"
        app:layout_constraintStart_toStartOf="@+id/buttonFacebook"
        app:layout_constraintTop_toTopOf="@+id/textOr" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/notifications_or"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/buttonFacebook"
        app:layout_constraintStart_toStartOf="@+id/buttonFacebook"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook" />

    <View
        android:id="@+id/viewRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:background="@color/ashykOrinDarkGray"
        app:layout_constraintBottom_toBottomOf="@+id/textOr"
        app:layout_constraintEnd_toEndOf="@id/buttonFacebook"
        app:layout_constraintStart_toEndOf="@+id/textOr"
        app:layout_constraintTop_toTopOf="@+id/textOr" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/ashykOrinWhite"
        android:text="@string/notifications_create_account"
        android:textAllCaps="false"
        android:textColor="@color/ashykOrinBlack"
        app:layout_constraintEnd_toEndOf="@+id/buttonFacebook"
        app:layout_constraintStart_toStartOf="@+id/buttonFacebook"
        app:layout_constraintTop_toBottomOf="@+id/textOr" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTerms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/notification_terms_privacy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textNothingToShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/notifications_nothing_to_see"
        android:textColor="@color/ashykOrinBlack"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewToolbar"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
